<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D5F2E8"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:text="@string/welcomeSignup"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:gravity="start"
                android:text="@string/accountLabel"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/SignupEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:hint="@string/signupEmail"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/signupPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:background="@color/white"
                android:hint="@string/signupPassword"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/signupRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:background="@color/white"
                android:hint="@string/signupConfirmPassword"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:textSize="18sp" />
            <Button
                android:id="@+id/signupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:backgroundTint="@color/teal_700"
                android:paddingHorizontal="40dp"
                android:paddingVertical="15dp"
                android:textColor="@color/white"
                android:text="@string/SignUpButton"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>